# mango-v4

./: .dockerignore  .env.sample  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .mocharc.json  .prettierignore  Anchor.toml  CHANGELOG.md  Cargo.toml  DEVELOPING.md  Dockerfile  Dockerfile.BAK  Dockerfile.keeper  Dockerfile.mm  FAQ-DEV.md  HOW-TO-RELEASE.md  LICENSE  Procfile  README.md  RELEASING.md  SECURITY.md  devnet_setup.sh  eslint.config.mjs  fix-npm-tag.sh  fly.toml  idl-fixup.sh  mango_v4.json  mc-release-to-devnet.sh  node-fetch-2.6.11-override-index.js  package-lock.json  package.json  parse_logs.py  patch  release-to-dao-buffer.sh  release-to-devnet.sh  release-to-mainnet.sh  release.sh  run-anchor-tests.sh  (+10 more)
cd/: fills.toml  (+9 more)
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: account_fetcher.rs  chain_data.rs  chain_data_fetcher.rs  client.rs  context.rs  gpa.rs  health_cache.rs  jupiter.rs  lib.rs  perp_pnl.rs  snapshot_source.rs  util.rs  websocket_source.rs
keeper/: .env.devnet  .env.example  .env.mainnet-beta  Cargo.toml  Dockerfile.keeper
keeper/src/: consume_events.rs  crank.rs  main.rs  mango_client.rs  taker.rs  update_funding.rs  update_index.rs  util.rs
lib/client/: Cargo.toml  build.rs
lib/client/src/: account_fetcher.rs  account_fetcher_trait.rs  account_fetcher_utils.rs  account_fetchers.rs  account_update_stream.rs  chain_data.rs  chain_data_fetcher.rs  client.rs  confirm_transaction.rs  context.rs  error_tracking.rs  feeds_chain_data_fetcher.rs  gpa.rs  grpc_source.rs  health_cache.rs  jupiter.rs  jupiter_v6.rs  lib.rs  mango_account_fetchers.rs  perp_pnl.rs  priority_fees.rs  priority_fees_cli.rs  snapshot_source.rs  util.rs  websocket_source.rs
lib/client/src/jupiter/: mod.rs  v4.rs  v6.rs
lib/client/src/swap/: jupiter_v6.rs  mod.rs  sanctum.rs  sanctum_state.rs
lib/mango-feeds-lib/: Cargo.toml
lib/mango-feeds-lib/src/: lib.rs  postgres_types_numeric.rs  serum.rs
lib/services-mango-lib/: Cargo.toml
lib/services-mango-lib/src/: env_helper.rs  lib.rs  postgres_configuration.rs  postgres_connection.rs  retry_counter.rs
liquidator/: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile.liquidator  README.md  example-config-mango-devnet.toml  example-config.toml
liquidator/src/: account_shared_data.rs  chain_data.rs  chain_data_fetcher.rs  health.rs  healthcheck.rs  liquidate.rs  main.rs  metrics.rs  rebalance.rs  snapshot_source.rs  util.rs  websocket_sink.rs  websocket_source.rs
programs/mango-v4/: Cargo.toml
programs/mango-v4/src/: accounts_zerocopy.rs  allocator.rs  error.rs  events.rs  i80f48.rs  lib.rs  logs.rs  mango_account_loader.rs  serum3_cpi.rs  solana_address_lookup_table_instruction.rs  types.rs  util.rs
programs/mango-v4/src/accounts_ix/: account_and_authority.rs  account_buyback_fees_with_mngo.rs  account_close.rs  account_create.rs  account_edit.rs  account_expand.rs  account_force_shrink.rs  account_settle_fees_accrued_with_mngo.rs  account_settle_fees_with_mngo.rs  account_size_migration.rs  account_toggle_freeze.rs  admin_perp_withdraw_fees.rs  admin_token_withdraw_fees.rs  alt_extend.rs  alt_set.rs  benchmark.rs  compute_account_data.rs  dao_withdraw_fees_perp_market.rs  dao_withdraw_fees_token.rs  flash_loan.rs  group_change_insurance_fund.rs  group_close.rs  group_create.rs  group_edit.rs  group_withdraw_insurance_fund.rs  health_check.rs  health_region.rs  ix_gate_set.rs  mod.rs  openbook_v2_cancel_all_orders.rs  openbook_v2_cancel_order.rs  openbook_v2_close_open_orders.rs  (+68 more)
programs/mango-v4/tests/: test_all.rs  test_alt.rs  test_bankrupt_tokens.rs  test_basic.rs  test_benchmark.rs  test_borrow_limits.rs  test_delegate.rs  test_group_address_lookup_tables.rs  test_health_compute.rs  test_health_region.rs  test_ix_gate_set.rs  test_liq_perps.rs  test_liq_tokens.rs  test_margin_trade.rs  test_perp.rs  test_perp_settle.rs  test_perp_settle_fees.rs  test_position_lifetime.rs  test_reduce_only.rs  test_serum.rs  test_token_update_index_and_rate.rs  test_update_index.rs
programs/margin-trade/: Cargo.toml  build-and-copy-fixture.sh
programs/margin-trade/src/: lib.rs
py/: cleanup.sh  pyproject.toml
py/examples/: basic.py
py/src/: program_id.py
py/src/accounts/: __init__.py  bank.py  book_side.py  event_queue.py  group.py  mango_account.py  mint_info.py  perp_market.py  serum3_market.py  serum3_market_index_reservation.py  stub_oracle.py
py/src/errors/: custom.py
py/src/instructions/: __init__.py  account_close.py  account_create.py  account_edit.py  account_expand.py  alt_extend.py  alt_set.py  benchmark.py  compute_account_data.py  flash_loan_begin.py  flash_loan_end.py  group_close.py  group_create.py  group_edit.py  health_region_begin.py  health_region_end.py  liq_token_bankruptcy.py  liq_token_with_token.py  perp_cancel_all_orders.py  perp_cancel_all_orders_by_side.py  perp_cancel_order.py  perp_cancel_order_by_client_order_id.py  perp_close_market.py  perp_consume_events.py  perp_create_market.py  perp_deactivate_position.py  perp_edit_market.py  perp_liq_bankruptcy.py  perp_liq_base_position.py  perp_liq_force_cancel_orders.py  perp_place_order.py  perp_settle_fees.py  perp_settle_pnl.py  perp_update_funding.py  serum3_cancel_all_orders.py  serum3_cancel_order.py  serum3_close_open_orders.py  serum3_create_open_orders.py  serum3_deregister_market.py  serum3_liq_force_cancel_orders.py  (+17 more)
py/src/types/: __init__.py  any_event.py  any_node.py  book_side_type.py  equity.py  event_queue_header.py  event_type.py  fill_event.py  flash_loan_token_detail.py  flash_loan_type.py  health_cache.py  health_type.py  i80f48.py  inner_node.py  interest_rate_params.py  leaf_node.py  loan_origination_fee_instruction.py  node_tag.py  oracle_config.py  oracle_type.py  order_type.py  out_event.py  perp_equity.py  perp_info.py  perp_market_index.py  perp_open_order.py  perp_position.py  serum3_info.py  serum3_market_index.py  serum3_order_type.py  serum3_orders.py  serum3_self_trade_behavior.py  serum3_side.py  side.py  token_equity.py  token_index.py  token_info.py  token_position.py
(+2750 files in other folders)
