[workspace]
members = [
    "bin/*",
    "programs/mango-v4",
    "lib/*",
]

[workspace.dependencies]
anchor-client = "0.28.0"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.8.0"
# commit c85e56d (0.5.10 plus dependency updates)
serum_dex = { git = "https://github.com/openbook-dex/program.git", default-features=false }
mango-feeds-connector = { git = "https://github.com/blockworks-foundation/mango-feeds.git", rev="5def8c9468c29a7e3b50bbc51946456de6dab52d"}

# 1.16.7+ is required due to this: https://github.com/blockworks-foundation/mango-v4/issues/712
solana-address-lookup-table-program = "~1.16.17"
solana-account-decoder = "~1.16.17"
solana-client = "~1.16.17"
solana-logger = "~1.16.17"
solana-program = "~1.16.17"
solana-program-test = "~1.16.17"
solana-rpc = "~1.16.17"
solana-sdk = { version = "~1.16.17", default-features = false }

[profile.release]
overflow-checks = true

[patch.crates-io]
# for gzip encoded responses
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc.git", branch = "ckamm/http-with-gzip" }
tokio = { git = "https://github.com/tokio-rs/tokio.git", tag = "tokio-1.29.1"}