[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anchor-client = { git = "https://github.com/blockworks-foundation/anchor.git", branch = "v0.25.0-mangov4", version = "0.25.0", features = [] }
anchor-lang = { git = "https://github.com/blockworks-foundation/anchor.git", branch = "v0.25.0-mangov4", version = "0.25.0", features = [] }
anchor-spl = { git = "https://github.com/blockworks-foundation/anchor.git", branch = "v0.25.0-mangov4", version = "0.25.0", features = [] }
anyhow = "1.0"
fixed = { version = "=1.11.0", features = ["serde", "borsh"] }
fixed-macro = "^1.1.1"
itertools = "0.10.3"
mango-v4 = { path = "../programs/mango-v4" }
pyth-sdk-solana = "0.1.0"
serum_dex = { version = "0.4.0", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
solana-account-decoder = "~1.10.29"
solana-client = "~1.10.29"
solana-sdk = "~1.10.29"
thiserror = "1.0.31"
