[package]
name = "keeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.22.0"
anchor-lang = "0.22.0"
anyhow = "1.0"
clap = { version = "3.1.8", features = ["derive", "env"] }
dotenv = "0.15.0"
mango-v4 = { path = "../programs/mango-v4" } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
solana-account-decoder = "1.9.5"
solana-client = "1.9.5"
solana-program = "1.9.5"
solana-rpc = "1.9.5"
solana-sdk = "1.9.5"
solana-transaction-status = "1.9.5"
tokio = { version = "1.17", features = ["rt-multi-thread", "time", "macros", "sync"] }