[package]
name = "keeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.24.2"
anchor-lang = "0.24.2"
anyhow = "1.0"
clap = { version = "3.1.8", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
futures = "0.3.21"
log = "0.4.0"
mango-v4 = { path = "../programs/mango-v4" } 
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# shellexpand = "2.1"
solana-client = "~1.9.13"
solana-sdk = "~1.9.13"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "time", "macros", "sync"] }