[package]
name = "liquidator"
version = "0.0.1"
edition = "2021"

[dependencies]
anchor-lang = { git = "https://github.com/blockworks-foundation/anchor.git", branch = "v0.25.0-mangov4", version = "0.25.0", features = [] }
anchor-client = { git = "https://github.com/blockworks-foundation/anchor.git", branch = "v0.25.0-mangov4", version = "0.25.0", features = [] }
anyhow = "1.0"
arrayref = "0.3.6"
async-channel = "1.6"
async-stream = "0.2"
async-trait = "0.1"
bs58 = "0.3.1"
bytemuck = "^1.7.2"
bytes = "1.0"
checked_math = { path = "../lib/checked_math" }
clap = { version = "3.1.8", features = ["derive", "env"] }
client = { path = "../client" }
dotenv = "0.15.0"
fixed = { version = "=1.11.0", features = ["serde"] }
futures = "0.3.17"
futures-core = "0.3"
futures-util = "0.3"
jemallocator = "0.3.2"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http", "tls"] }
log = "0.4"
mango-v4 = { path = "../programs/mango-v4", features = ["no-entrypoint", "client"] }
once_cell = "1.12.0"
pyth-sdk-solana = "0.1.0"
rand = "0.7"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
serum_dex = { version = "0.4.0", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
shellexpand = "2.1.0"
solana-account-decoder = "~1.10.29"
solana-client = "~1.10.29"
solana-logger = "~1.10.29"
solana-rpc = "~1.10.29"
solana-sdk = "~1.10.29"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.9"}
tokio-tungstenite = "0.16.1"
