[tool.poetry]
name = "mango-client"
version = "0.1.0"
description = "A Python client for Mango Markets"
authors = [""]
license = "MIT"
readme = "README.md"
homepage = ""
documentation = ""

[tool.poetry.dependencies]
python = "^3.9"
anchorpy = "^0.6.5"
solana = "^0.21.0"
requests = "^2.27.1"
types-requests = "^2.27.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^21.12b0"
pytest-asyncio = "^0.17.2"
mkdocstrings = "^0.17.0"
mkdocs-material = "^8.1.8"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
