[package]
name = "mango-v4-client"
version = "0.3.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anchor-client = { path = "../../3rdparty/anchor/client" }
anchor-lang = { path = "../../3rdparty/anchor/lang" }
anchor-spl = { path = "../../3rdparty/anchor/spl" }
anyhow = "1.0"
async-channel = "1.6"
async-once-cell = { version = "0.4.2", features = ["unpin"] }
async-trait = "0.1.52"
fixed = { path = "../../3rdparty/fixed", version = "1.11.0", features = ["serde", "borsh"] }
futures = "0.3.25"
itertools = "0.10.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http", "tls"] }
mango-v4 = { path = "../../programs/mango-v4", features = ["client"] }
pyth-sdk-solana = "0.1.0"
serum_dex = { git = "https://github.com/openbook-dex/program.git", default-features=false,features = ["no-entrypoint", "program"] }
shellexpand = "2.1.0"
solana-account-decoder = "~1.14.9"
solana-client = "~1.14.9"
solana-rpc = "~1.14.9"
solana-sdk = "~1.14.9"
solana-address-lookup-table-program = "~1.14.9"
spl-associated-token-account = "1.0.3"
thiserror = "1.0.31"
log = "0.4"
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.9"}
serde = "1.0.141"
serde_json = "1.0.82"
base64 = "0.13.0"
bincode = "1.3.3"
