[package]
name = "mango-feeds-lib"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]


[dependencies]

solana-client = "~1.16.7"
solana-account-decoder = "~1.16.7"
solana-sdk = "~1.16.7"


fixed = { workspace = true }

bs58 = "0.5"
base64 = "0.21.0"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
bytes = "1.0"
itertools = "0.10.5"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.17"
futures-core = "0.3"
async-channel = "1.6"
async-trait = "0.1"
bytemuck = "1.7.2"
chrono = "0.4.23"

[build-dependencies]
tonic-build = { version = "0.6", features = ["compression"] }

