[package]
name = "margin-trade"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "margin_trade"
doctest = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = { path = "../../3rdparty/anchor/lang" }
anchor-spl = { path = "../../3rdparty/anchor/spl" }
solana-program = "~1.14.9"
